# openvtt

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  justfile
openvtt_app/: Cargo.toml  justfile
openvtt_app/.cargo/: config.toml
openvtt_app/src/: egui_blocking_plugin.rs  lib.rs  main.rs  online.rs  resources.rs  web.rs
openvtt_server/: .gitignore  Cargo.toml  justfile
openvtt_server/migrations/2023-08-30-225810_create_players/: up.sql
openvtt_server/src/: database.rs  errors.rs  lib.rs  main.rs  models.rs  routes.rs  signaling.rs
openvtt_server/src/database/: models.rs  schema.rs
openvtt_server/src/errors/: auth.rs  player.rs
openvtt_server/src/routes/: auth.rs  players.rs  root.rs  upload.rs
openvtt_server/www/: index.html
