[package]
name = "openvtt_app"
version = "0.1.0"
authors = []
edition = "2021"
description = ""
homepage = ""
repository = ""
readme = "README.md"
license = ""
include = ["src", "assets", "LICENSE*", "README*"]

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking", "bevy/bevy_dev_tools", "bevy/file_watcher"]
wasm-dev = ["bevy/bevy_dev_tools"]

[dependencies]
bevy = { version = "0.14.2", features = ["wayland"] }
bevy_egui = "0.30.0"
bevy-inspector-egui = "0.27.0"
bevy_asset_loader = "0.21.0"
bevy_framepace = "0.17.1"
bevy_pancam = { version = "0.14.0", features = ["bevy_egui"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
