[package]
name = "openvtt_app"
version = "0.1.0"
authors = []
edition = "2021"
description = ""
homepage = ""
repository = ""
readme = "README.md"
license = ""
include = ["src", "assets", "LICENSE*", "README*"]

[features]
dev = [
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
  "bevy/file_watcher",
  "dep:bevy-inspector-egui",
  "bevy/bevy_picking",
  "bevy/bevy_pbr",
]
default = ["dev"]
wasm-dev = [
  "bevy/bevy_dev_tools",
  "dep:bevy-inspector-egui",
  "bevy/bevy_picking",
  "bevy/bevy_pbr",
]

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_log",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_window",
  "default_font",
  "multi_threaded",
  "webgl2",
  "wayland",
] }
bevy-inspector-egui = { version = "0.32.0", optional = true }
bevy_egui = "0.35.1"
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
