[package]
name = "openvtt_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
matchbox_signaling = "0.7.0"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.4", features = ["fs", "limit", "trace"] }
futures = "0.3.28"
tokio-util = { version = "0.7.8", features = ["io"] }
serde_json = "1.0.107"
diesel = { version = "2.1.1", features = ["sqlite"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
bcrypt = "0.15.0"
jsonwebtoken = "8.3.0"
deadpool-diesel = { version = "0.4.1", features = ["sqlite"] }
axum-macros = "0.3.8"
listenfd = "1.0.1"
